--- a/components/t5kzimdwp-go/overlays/development/deployment-patch.yaml
+++ b/components/t5kzimdwp-go/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: t5kzimdwp-go
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-f4c8631368.5s0g.p3.openshiftapps.com/rhtap/rhtap-qe:7a6bcf79c911e799cd9b46c6fe971caab4dd911d@sha256:b18639d335eadcfa3a87600f281dee238d2cb80a3c2ede1a70b3c238070a425b
+          name: container-image
